# bugs

./: .gitignore
bazel6/: README.md  WORKSPACE
bazel6/missing_file/: BUILD
bazel6/missing_runfiles/: BUILD  goodbye.c
bazel6/rules/: defs.bzl
bazel6/tools/: BUILD  sha256.py
cryptoki/: Cargo.toml
cryptoki/src/: main.rs
minspec/: README.md
minspec/case1/: Cargo.toml  README.md
minspec/case1/src/: main.rs
minspec/case2/: BUILD.bazel  Cargo.toml  README.md  WORKSPACE.bazel
minspec/case2/src/: main.rs
minspec/case3/: BUILD.bazel  Cargo.toml  README.md  WORKSPACE.bazel
minspec/case3/src/: main.rs
minspec/greeting/: BUILD.bazel  Cargo.toml  WORKSPACE.bazel
minspec/greeting/src/: lib.rs
