workspace(name = "greeting")

# Rust Toolchain
load("//third_party/rust:repos.bzl", "rust_repos")
rust_repos()

load("//third_party/rust:deps.bzl", "rust_deps")
rust_deps()

# Use crate_universe to pull in crates.io dependencies specified in
# the Cargo.toml files.
load("@rules_rust//crate_universe:repositories.bzl", "crate_universe_dependencies")
crate_universe_dependencies()

load("//third_party/rust/crates:crates.bzl", "crate_repositories")
crate_repositories()
